assets/css/style.css
/* ... */
@keyframes rotateme {
  from {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-webkit-keyframes rotateme {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}
.preloader {
  background-color: #f7f7f7;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 999999;
  -webkit-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
  margin: 0 auto;
}
.preloader .preloader-circle {
  width: 100px;
  height: 100px;
  position: relative;
  border-style: solid;
  border-width: 1px;
  border-top-color: #ff5f13;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
  z-index: 10;
  border-radius: 50%;
  -webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
  box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
  background-color: #ffffff;
  -webkit-animation: zoom 2000ms infinite ease;
  animation: zoom 2000ms infinite ease;
  -webkit-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
}
.preloader .preloader-circle2 {
  border-top-color: #0078ff;
}
.preloader .preloader-img {
  position: absolute;
  top: 50%;
  z-index: 200;
  left: 0;
  right: 0;
  margin: 0 auto;
  text-align: center;
  display: inline-block;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  padding-top: 6px;
  -webkit-transition: 0.6s;
  -o-transition: 0.6s;
  transition: 0.6s;
}
.preloader .preloader-img img {
  max-width: 55px;
}
.preloader .pere-text strong {
  font-weight: 800;
  color: #dca73a;
  text-transform: uppercase;
}
@-webkit-keyframes zoom {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: 0.6s;
    -o-transition: 0.6s;
    transition: 0.6s;
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
    -webkit-transition: 0.6s;
    -o-transition: 0.6s;
    transition: 0.6s;
  }
}
@keyframes zoom {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: 0.6s;
    -o-transition: 0.6s;
    transition: 0.6s;
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
    -webkit-transition: 0.6s;
    -o-transition: 0.6s;
    transition: 0.6s;
  }
}
.section-padding2 {
  padding-top: 200px;
  padding-bottom: 200px;
}
@media only screen and (min-width: 1200px) and (max-width: 1600px) {
  .section-padding2 {
    padding-top: 200px;
    padding-bottom: 200px;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1200px) {
  .section-padding2 {
    padding-top: 200px;
    padding-bottom: 200px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .section-padding2 {
    padding-top: 100px;
    padding-bottom: 100px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .section-padding2 {
    padding-top: 50px;
    padding-bottom: 50px;
  }
}
@media (max-width: 575px) {
  .section-padding2 {
    padding-top: 35px;
    padding-bottom: 50px;
  }
}
.section-padding30 {
  padding-top: 183px;
  padding-bottom: 170px;
}
@media only screen and (min-width: 1200px) and (max-width: 1600px) {
  .section-padding30 {
  padding-top: 50px;
  padding-bottom: 0px;	
  }
}
@media only screen and (min-width: 992px) and (max-width: 1200px) {
  .section-padding30 {
    padding-top: 150px;
    padding-bottom: 120px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .section-padding30 {
    padding-top: 100px;
    padding-bottom: 70px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .section-padding30 {
    padding-top: 70px;
    padding-bottom: 20px;
  }
}
@media (max-width: 575px) {
  .section-padding30 {
    padding-top: 70px;
    padding-bottom: 20px;
  }
}
.testimonial-padding {
  padding-top: 157px;
  padding-bottom: 157px;
}
@media only screen and (min-width: 1200px) and (max-width: 1600px) {
  .testimonial-padding {
    padding-top: 157px;
    padding-bottom: 157px;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1200px) {
  .testimonial-padding {
    padding-top: 120px;
    padding-bottom: 120px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .testimonial-padding {
    padding-top: 100px;
    padding-bottom: 100px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .testimonial-padding {
    padding-top: 80px;
    padding-bottom: 60px;
  }
}
@media (max-width: 575px) {
  .testimonial-padding {
    padding-top: 80px;
    padding-bottom: 60px;
  }
}
.footer-padding {
  padding-top: 130px;
  padding-bottom: 100px;
}
@media only screen and (min-width: 1200px) and (max-width: 1600px) {
  .footer-padding {
    padding-top: 130px;
    padding-bottom: 100px;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1200px) {
  .footer-padding {
    padding-top: 100px;
    padding-bottom: 50px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .footer-padding {
    padding-top: 100px;
    padding-bottom: 0px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .footer-padding {
    padding-top: 50px;
    padding-bottom: 0px;
  }
}
@media (max-width: 575px) {
  .footer-padding {
    padding-top: 50px;
    padding-bottom: 0px;
  }
}
.section-tittle {
  position: relative;
}
@media (max-width: 575px) {
  .section-tittle {
    margin-bottom: 0px;
  }
}
.section-tittle .front-text {
  position: relative;
  z-index: 2;
}
.section-tittle .front-text h2 {
  color: #0e132a;
  font-size: 70px;
  font-weight: 700;
  line-height: 1.2;
  text-transform: uppercase;
  font-family: "Teko", sans-serif;
}
@media (max-width: 575px) {
  .section-tittle .front-text h2 {
    font-size: 40px;
    line-height: 1.4;
  }
}
/* ... */

